fixed css spacing

--- a/src/AboutUs.css
+++ b/src/AboutUs.css
@@ -1,9 +1,9 @@
 .about-us-container {
-    width: 1000px;
     /* margin: 0 auto; */
     /* padding: 20px; */
     /* background-color: red; */
     text-align: justify;
+    width: 1000px;
   }
   
   .about-us-heading {
@@ -23,6 +23,7 @@
   .about-us-content {
     font-size: 18px;
     margin-bottom: 20px;
+    width: 60vw;
   }
   .plant_logo_right{
     text-align: right;
