--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,7 @@
   justify-content: center;
   height: 100vh;
   width: 100vw;
- top: 100px;
+  top: 100px;
   backdrop-filter: blur(4px);
   background-color: rgba(0,0,0,0.5);
   gap: 20px;
@@ -39,7 +39,7 @@
 .landing_content {
  margin-top: 430px;
   margin-left: 100px;
-  transform: translate(-50%, -50%);
+  transform: translate(-10%, -50%);
   z-index: 1;
   text-align: center;
   /* background-color: red; */
